# vrp-general

./: README.md  pyproject.toml
notebooks/: benchmarks copy.ipynb  benchmarks.ipynb
vrp_study/: __init__.py  configs.py  data_model.py  initial_solution_builder.py  routing_manager.py  solution_checker.py  solver.py
vrp_study/init_solution_builder/: solution_builder.py
vrp_study/ortools_routing_model/: routing_model.py
vrp_study/ortools_routing_model_pdptw/: pdptw_routing_manager_builder.py  routing_model.py  solution_builder.py  solution_checker.py
vrp_study/pdptw_model/: routing_model.py  solution_builder.py
